# Apollo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  export
include/: bot.h  config.h  hash.h  hashmap.h  httpapi.h  list.h  main.h  message.h  net.h  parse.h  plugins.h  protocol.h  util.h  vector.h
plugins/: .plug.c  .tmp.c  CMakeLists.txt  Makefile  common.c  createplug.py  makeplug.sh  uncommon.c
plugins/bf/: bf.c
plugins/common/: Makefile  common.c
plugins/fifo/: fifo.c
plugins/number/: number.c
plugins/proto_irc/: proto_irc.c  proto_irc_handlers.c  proto_irc_handlers.h  proto_irc_parse.c  proto_irc_parse.h
plugins/uncommon/: uncommon.c
src/: CMakeLists.txt  bot.h  config.c  handlers.c  handlers.h  httpapi.c  list.c  list.h  main.c  net.c  net.h  parse.c  plugins.c  protocol.c  util.c
